--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -13,7 +13,7 @@ wandb:
 
 # multiprocessing
 mp_start_method: spawn # fork
-obs_per_agent: 4 #128
+obs_per_agent: 4 # 128
 
 # quartz
 input_graph_path: '../barenco_tof_3_opt_path/subst_history_39.qasm'
@@ -23,7 +23,7 @@ no_increase: False
 include_nop: True
 
 # exp collection
-collect_batch_size: 128
+global_batch_size: 128
 batch_inference: True
 len_episode: 300
 invalid_reward: -1.0
@@ -36,4 +36,5 @@ critic_hidden_size: 128
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
 lr_critic: 1e-3
+update_policy_interval: 20
 save_ckpt_interval: 10
