--- a/.gitignore
+++ b/.gitignore
@@ -81,5 +81,7 @@ experiment/ppo/pretrain/outputs
 experiment/ppo/pretrain/config/config.yaml
 experiment/ppo/pretrain/pretrain_dataset_g9
 experiment/ppo/pretrain/pretrain_dataset_g99
+experiment/ppo/ppo_multi_step/PPO_logs
+experiment/ppo/ppo_multi_step/PPO_preTrained
 
 experiment/a2c/*txt
