--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -28,11 +28,14 @@ batch_inference: True
 len_episode: 300
 invalid_reward: -1.0
 
-# training
-max_iterations: 1e8
+# network
 graph_embed_size: 128
 actor_hidden_size: 256
 critic_hidden_size: 128
+
+# training
+max_iterations: 1e8
+k_epochs: 10
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
 lr_critic: 1e-3
