--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -7,7 +7,7 @@ num_workers: 8
 
 seed: 98765
 wandb:
-  en: False
+  en: True
   offline: False
   entity: quartz
 
@@ -32,6 +32,11 @@ invalid_reward: -1.0
 graph_embed_size: 128
 actor_hidden_size: 256
 critic_hidden_size: 128
+
+# algorithm
+gamma: 0.95
+entropy_coeff: 0.02
+eps_clip: 0.2
 
 # training
 max_iterations: 1e8
