--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -13,20 +13,27 @@ wandb:
 
 # multiprocessing
 mp_start_method: spawn # fork
-obs_per_agent: 4 # 128
+obs_per_agent: 2 # 128
 
 # quartz
-input_graph_path: '../barenco_tof_3_opt_path/subst_history_39.qasm'
+input_graphs:
+  - name: 'barenco_tof_3'
+    path: '../barenco_tof_3_opt_path/subst_history_39.qasm'
+  # - name: 'barenco_tof_3'
+  #   path: '../barenco_tof_3_opt_path/subst_history_39.qasm'
+
 gate_set: ['h', 'cx', 't', 'tdg']
 ecc_file: 'bfs_verified_simplified.json'
 no_increase: False
 include_nop: True
 
 # exp collection
+nop_stop: True
 global_batch_size: 128
 batch_inference: True
 len_episode: 300
 invalid_reward: -1.0
+max_gate_count_ratio: 1.2
 
 # network
 graph_embed_size: 128
@@ -37,10 +44,11 @@ critic_hidden_size: 128
 gamma: 0.95
 entropy_coeff: 0.02
 eps_clip: 0.2
+softmax_hit_rate: 0.8
 
 # training
 max_iterations: 1e8
-k_epochs: 10
+k_epochs: 10 # TODO
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
 lr_critic: 1e-3
