--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -45,6 +45,7 @@ file(GLOB_RECURSE TEST_IBMQ_TD_DISABLED "test_ibmq_td_disabled.cpp")
 file(GLOB_RECURSE TEST_NAM_TD_DISABLED "test_nam_td_disabled.cpp")
 file(GLOB_RECURSE TEST_RIGETTI_TD_DISABLED "test_rigetti_td_disabled.cpp")
 file(GLOB_RECURSE TEST_APPLIABLE_XFER "test_appliable_xfer.cpp")
+file(GLOB_RECURSE TEST_FROM_AND_TO_QASM "test_from_and_to_qasm.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -75,6 +76,7 @@ add_executable(test_ibmq_td_disabled ${TEST_IBMQ_TD_DISABLED} )
 add_executable(test_nam_td_disabled ${TEST_NAM_TD_DISABLED} )
 add_executable(test_rigetti_td_disabled ${TEST_RIGETTI_TD_DISABLED} )
 add_executable(test_appliable_xfer ${TEST_APPLIABLE_XFER} )
+add_executable(test_from_and_to_qasm ${TEST_FROM_AND_TO_QASM} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
