--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -29,7 +29,7 @@ include_nop: True
 
 # exp collection
 nop_stop: True
-global_batch_size: 0
+num_trajs_per_iter: 9
 batch_inference: True
 len_episode: 300
 invalid_reward: -1.0
@@ -48,6 +48,7 @@ softmax_hit_rate: 0.8
 
 # training
 max_iterations: 1e8
+mini_batch_size: 3072 # per DDP process
 k_epochs: 20 # TODO
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
