--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -1,6 +1,6 @@
 mode: train
 resume: False
-ckpt_path: outputs/2022-05-10/13-29-42/last.ckpt
+ckpt_path: outputs/2022-06-21/17-33-40/iter_174.pt
 
 gpus: [2,3]
 # num_workers: 8
@@ -29,7 +29,6 @@ include_nop: True
 
 # exp collection
 nop_stop: True
-num_trajs_per_iter: 9
 batch_inference: True
 len_episode: 300
 invalid_reward: -1.0
@@ -48,10 +47,11 @@ softmax_hit_rate: 0.8
 
 # training
 max_iterations: 1e8
-mini_batch_size: 3072 # per DDP process
+num_trajs_per_iter: 12
+mini_batch_size: 3600 # per DDP process; < num_trajs_per_iter * len_episode
 k_epochs: 20 # TODO
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
 lr_critic: 1e-3
-update_policy_interval: 20
-save_ckpt_interval: 10
+update_policy_interval: 1
+save_ckpt_interval: 1
