use new qasm to graph API and update env.yml

--- a/experiment/env.yml
+++ b/experiment/env.yml
@@ -1,6 +1,7 @@
 name: quartz
 channels:
   - defaults
+  - conda-forge
   - dglteam
   - pytorch
 dependencies:
@@ -11,6 +12,12 @@ dependencies:
   - cudatoolkit=11.3
   - pytorch
   - dgl-cuda11.3
+  - openmp
+  - hydra-core
+  - icecream
+  - mypy
+  - mypy_extensions
+  - wandb
   - pip:
     - cython==3.0.0a10
     - z3-solver
