fix env.yml to ensure torch will be installed with cuda and add timestamp in logging

--- a/experiment/env.yml
+++ b/experiment/env.yml
@@ -6,11 +6,13 @@ channels:
   - pytorch
 dependencies:
   - python
+  - pip
+  - ipython
   - tqdm
   - numpy
   - matplotlib
-  - cudatoolkit=11.3
   - pytorch
+  - cudatoolkit=11.3
   - dgl-cuda11.3
   - openmp
   - hydra-core
