fix timeoout and inf for torch181 compatibility

--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -3,6 +3,7 @@ resume: False
 ckpt_path: outputs/2022-06-21/17-33-40/iter_174.pt
 
 gpus: [2,3]
+ddp_port: 23333
 # num_workers: 8
 
 seed: 98765
@@ -10,10 +11,6 @@ wandb:
   en: True
   offline: False
   entity: quartz
-
-# multiprocessing
-mp_start_method: spawn # fork
-obs_per_agent: 3 # 128
 
 # quartz
 input_graphs:
@@ -29,7 +26,6 @@ include_nop: True
 
 # exp collection
 nop_stop: True
-batch_inference: True
 len_episode: 300
 invalid_reward: -1.0
 max_gate_count_ratio: 1.2
@@ -45,11 +41,16 @@ entropy_coeff: 0.02
 eps_clip: 0.2
 softmax_hit_rate: 0.8
 
+# multiprocessing
+mp_start_method: spawn # fork
+obs_per_agent: 1 # 128
+
 # training
 max_iterations: 1e8
-num_trajs_per_iter: 12
+batch_inference: False
+num_trajs_per_iter: 128
 mini_batch_size: 3600 # per DDP process; < num_trajs_per_iter * len_episode
-k_epochs: 20 # TODO
+k_epochs: 30 # TODO
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
 lr_critic: 1e-3
