--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -4,7 +4,7 @@ ckpt_path: outputs/2022-06-21/17-33-40/iter_174.pt
 
 gpus: [2,3]
 ddp_port: 23333
-# num_workers: 8
+omp_num_threads: 0
 
 seed: 98765
 wandb:
@@ -24,12 +24,6 @@ ecc_file: 'bfs_verified_simplified.json'
 no_increase: False
 include_nop: True
 
-# exp collection
-nop_stop: True
-len_episode: 300
-invalid_reward: -1.0
-max_gate_count_ratio: 1.2
-
 # network
 graph_embed_size: 128
 actor_hidden_size: 256
@@ -45,9 +39,16 @@ softmax_hit_rate: 0.8
 mp_start_method: spawn # fork
 obs_per_agent: 1 # 128
 
+# exp collection
+nop_stop: True
+len_episode: 300
+invalid_reward: -1.0
+max_gate_count_ratio: 1.2
+batch_inference: False
+agent_collect: False
+
 # training
 max_iterations: 1e8
-batch_inference: False
 num_trajs_per_iter: 128
 mini_batch_size: 3600 # per DDP process; < num_trajs_per_iter * len_episode
 k_epochs: 30 # TODO
