--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -39,7 +39,7 @@ softmax_temp:
 
 # multiprocessing
 mp_start_method: spawn # fork
-obs_per_agent: 1 # 128
+obs_per_agent: 3 # 128
 
 # exp collection
 nop_stop: True
@@ -49,12 +49,12 @@ batch_inference: True
 agent_collect: False
 dyn_eps_len: True
 max_eps_len: 300
-min_eps_len: 10
+min_eps_len: 20
 
 # training
 max_iterations: 1e8
-num_trajs_per_iter: 128
-mini_batch_size: 3600 # per DDP process; < num_trajs_per_iter * len_episode
+num_eps_per_iter: 30
+mini_batch_size: 3600 # per DDP process; < num_eps_per_iter * len_episode
 k_epochs: 30 # TODO
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
