add has_parameterized_gate, change default values of some configs

--- a/experiment/ppo-new/config/config.yaml
+++ b/experiment/ppo-new/config/config.yaml
@@ -2,15 +2,16 @@ mode: train
 resume: False
 ckpt_path: outputs/2022-06-21/17-33-40/iter_174.pt
 
-gpus: [2,3]
+gpus: [0,1,2,3]
 ddp_port: 23333
-omp_num_threads: 0
+omp_num_threads: 1
 
 seed: 98765
 wandb:
   en: True
   offline: False
   entity: quartz
+  project: PPO
 
 # quartz
 input_graphs:
@@ -55,7 +56,7 @@ min_eps_len: 20
 max_iterations: 1e8
 num_eps_per_iter: 30
 mini_batch_size: 3600 # per DDP process; < num_eps_per_iter * len_episode
-k_epochs: 30 # TODO
+k_epochs: 25
 lr_graph_embedding: 3e-4
 lr_actor: 3e-4
 lr_critic: 5e-4
