--- a/experiment/env.yml
+++ b/experiment/env.yml
@@ -1,9 +1,10 @@
 name: quartz
 channels:
   - defaults
-  - conda-forge
   - dglteam
   - pytorch
+  - conda-forge
+  # ref: https://stackoverflow.com/a/69180871
 dependencies:
   - python
   - pip
@@ -11,7 +12,7 @@ dependencies:
   - tqdm
   - numpy
   - matplotlib
-  - pytorch
+  - pytorch::pytorch
   - cudatoolkit=11.3
   - dgl-cuda11.3
   - openmp
