Added a test file for testing new optimize() API

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -46,6 +46,7 @@ file(GLOB_RECURSE TEST_NAM_TD_DISABLED "test_nam_td_disabled.cpp")
 file(GLOB_RECURSE TEST_RIGETTI_TD_DISABLED "test_rigetti_td_disabled.cpp")
 file(GLOB_RECURSE TEST_APPLIABLE_XFER "test_appliable_xfer.cpp")
 file(GLOB_RECURSE TEST_FROM_AND_TO_QASM "test_from_and_to_qasm.cpp")
+file(GLOB_RECURSE TEST_OPTIMIZE "test_optimize.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -77,6 +78,7 @@ add_executable(test_nam_td_disabled ${TEST_NAM_TD_DISABLED} )
 add_executable(test_rigetti_td_disabled ${TEST_RIGETTI_TD_DISABLED} )
 add_executable(test_appliable_xfer ${TEST_APPLIABLE_XFER} )
 add_executable(test_from_and_to_qasm ${TEST_FROM_AND_TO_QASM} )
+add_executable(test_optimize ${TEST_OPTIMIZE} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
