Fix Windows build and separate gen_ecc_set definition into a header file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,12 +75,15 @@ target_include_directories(quartz_runtime
         PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 execute_process(COMMAND cat /proc/version RESULT_VARIABLE NOT_LINUX)
+# TODO: check different OS in a better way here
 if (NOT_LINUX)
-    message("build on macOS, link openmp lib with compiler clang")
-    include_directories(/usr/local/include)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -fopenmp")
-    find_library(OPENMP_LIB libomp.dylib /usr/local/lib)
-    target_link_libraries(quartz_runtime LINK_PUBLIC ${OPENMP_LIB})
+    if (NOT MSVC)
+        message("build on macOS, link openmp lib with compiler clang")
+        include_directories(/usr/local/include)
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -fopenmp")
+        find_library(OPENMP_LIB libomp.dylib /usr/local/lib)
+        target_link_libraries(quartz_runtime LINK_PUBLIC ${OPENMP_LIB})
+    endif()
 else()
     message("build on Linux")
     if (DEFINED ENV{CC} AND DEFINED ENV{CXX})
