finished function: execute_front_gate

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -53,7 +53,7 @@ file(GLOB_RECURSE TEST_SABRE "test_sabre.cpp")
 file(GLOB_RECURSE TEST_APPLY_MAPPING "test_apply_mapping.cpp")
 file(GLOB_RECURSE TEST_SABRE_FULL "test_sabre_full.cpp")
 file(GLOB_RECURSE TEST_SABRE_WITH_SEARCH "test_sabre_with_search.cpp")
-file(GLOB_RECURSE TEST_GAME "test_game.cpp")
+file(GLOB_RECURSE TEST_EXECUTE_GATE "test_execute_gate.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -92,7 +92,7 @@ add_executable(test_sabre ${TEST_SABRE})
 add_executable(test_apply_mapping ${TEST_APPLY_MAPPING})
 add_executable(test_sabre_full ${TEST_SABRE_FULL})
 add_executable(test_sabre_with_search ${TEST_SABRE_WITH_SEARCH})
-add_executable(test_game ${TEST_GAME})
+add_executable(test_execute_gate ${TEST_EXECUTE_GATE})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
