--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -54,6 +54,7 @@ file(GLOB_RECURSE TEST_APPLY_MAPPING "test_apply_mapping.cpp")
 file(GLOB_RECURSE TEST_SABRE_FULL "test_sabre_full.cpp")
 file(GLOB_RECURSE TEST_SABRE_WITH_SEARCH "test_sabre_with_search.cpp")
 file(GLOB_RECURSE TEST_EXECUTE_GATE "test_execute_gate.cpp")
+file(GLOB_RECURSE TEST_FIND_EXECUTABLE_FRONT_GATES "test_find_executable_front_gates.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -93,6 +94,7 @@ add_executable(test_apply_mapping ${TEST_APPLY_MAPPING})
 add_executable(test_sabre_full ${TEST_SABRE_FULL})
 add_executable(test_sabre_with_search ${TEST_SABRE_WITH_SEARCH})
 add_executable(test_execute_gate ${TEST_EXECUTE_GATE})
+add_executable(test_find_executable_front_gates ${TEST_FIND_EXECUTABLE_FRONT_GATES})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
