--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -56,6 +56,7 @@ file(GLOB_RECURSE TEST_SABRE_WITH_SEARCH "test_sabre_with_search.cpp")
 file(GLOB_RECURSE TEST_EXECUTE_GATE "test_execute_gate.cpp")
 file(GLOB_RECURSE TEST_FIND_EXECUTABLE_FRONT_GATES "test_find_executable_front_gates.cpp")
 file(GLOB_RECURSE TEST_SIMPLIFY_CIRCUIT "test_simplify_circuit.cpp")
+file(GLOB_RECURSE TEST_GAME "test_game.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -97,6 +98,7 @@ add_executable(test_sabre_with_search ${TEST_SABRE_WITH_SEARCH})
 add_executable(test_execute_gate ${TEST_EXECUTE_GATE})
 add_executable(test_find_executable_front_gates ${TEST_FIND_EXECUTABLE_FRONT_GATES})
 add_executable(test_simplify_circuit ${TEST_SIMPLIFY_CIRCUIT})
+add_executable(test_game ${TEST_GAME})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
