finished testing physical part of game with Sabre

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -58,6 +58,7 @@ file(GLOB_RECURSE TEST_FIND_EXECUTABLE_FRONT_GATES "test_find_executable_front_g
 file(GLOB_RECURSE TEST_SIMPLIFY_CIRCUIT "test_simplify_circuit.cpp")
 file(GLOB_RECURSE TEST_GAME "test_game.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION "test_apply_action.cpp")
+file(GLOB_RECURSE TEST_APPLY_ACTION_FULL "test_apply_action_full.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -100,7 +101,7 @@ add_executable(test_execute_gate ${TEST_EXECUTE_GATE})
 add_executable(test_find_executable_front_gates ${TEST_FIND_EXECUTABLE_FRONT_GATES})
 add_executable(test_simplify_circuit ${TEST_SIMPLIFY_CIRCUIT})
 add_executable(test_game ${TEST_GAME})
-add_executable(test_apply_action ${TEST_APPLY_ACTION})
+add_executable(test_apply_action_full ${TEST_APPLY_ACTION_FULL})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
