add built-in devices; add environment

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -59,6 +59,7 @@ file(GLOB_RECURSE TEST_SIMPLIFY_CIRCUIT "test_simplify_circuit.cpp")
 file(GLOB_RECURSE TEST_GAME "test_game.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION "test_apply_action.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION_FULL "test_apply_action_full.cpp")
+file(GLOB_RECURSE TEST_ENV "test_env.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -102,6 +103,7 @@ add_executable(test_find_executable_front_gates ${TEST_FIND_EXECUTABLE_FRONT_GAT
 add_executable(test_simplify_circuit ${TEST_SIMPLIFY_CIRCUIT})
 add_executable(test_game ${TEST_GAME})
 add_executable(test_apply_action_full ${TEST_APPLY_ACTION_FULL})
+add_executable(test_env ${TEST_ENV})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
