--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -63,6 +63,7 @@ file(GLOB_RECURSE TEST_GAME "test_game.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION "test_apply_action.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION_FULL "test_apply_action_full.cpp")
 file(GLOB_RECURSE TEST_ENV "test_env.cpp")
+file(GLOB_RECURSE TEST_GRAPH_STATE "test_graph_state.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -110,6 +111,7 @@ add_executable(test_simplify_circuit ${TEST_SIMPLIFY_CIRCUIT})
 add_executable(test_game ${TEST_GAME})
 add_executable(test_apply_action_full ${TEST_APPLY_ACTION_FULL})
 add_executable(test_env ${TEST_ENV})
+add_executable(test_graph_state ${TEST_GRAPH_STATE})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
