--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -64,6 +64,7 @@ file(GLOB_RECURSE TEST_APPLY_ACTION "test_apply_action.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION_FULL "test_apply_action_full.cpp")
 file(GLOB_RECURSE TEST_ENV "test_env.cpp")
 file(GLOB_RECURSE TEST_GRAPH_STATE "test_graph_state.cpp")
+file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -112,6 +113,7 @@ add_executable(test_game ${TEST_GAME})
 add_executable(test_apply_action_full ${TEST_APPLY_ACTION_FULL})
 add_executable(test_env ${TEST_ENV})
 add_executable(test_graph_state ${TEST_GRAPH_STATE})
+add_executable(test_rollout ${TEST_ROLLOUT})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
