--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -64,7 +64,9 @@ file(GLOB_RECURSE TEST_APPLY_ACTION "test_apply_action.cpp")
 file(GLOB_RECURSE TEST_APPLY_ACTION_FULL "test_apply_action_full.cpp")
 file(GLOB_RECURSE TEST_ENV "test_env.cpp")
 file(GLOB_RECURSE TEST_GRAPH_STATE "test_graph_state.cpp")
+# benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
+file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -114,6 +116,7 @@ add_executable(test_apply_action_full ${TEST_APPLY_ACTION_FULL})
 add_executable(test_env ${TEST_ENV})
 add_executable(test_graph_state ${TEST_GRAPH_STATE})
 add_executable(test_rollout ${TEST_ROLLOUT})
+add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
