add a function to get k layer front set of current graph

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -65,6 +65,7 @@ file(GLOB_RECURSE TEST_APPLY_ACTION_FULL "test_apply_action_full.cpp")
 file(GLOB_RECURSE TEST_ENV "test_env.cpp")
 file(GLOB_RECURSE TEST_GRAPH_STATE "test_graph_state.cpp")
 file(GLOB_RECURSE TEST_TOPOLOGY_ORDER "test_topology_order.cpp")
+file(GLOB_RECURSE TEST_FRONT_SET "test_front_set.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -117,6 +118,7 @@ add_executable(test_apply_action_full ${TEST_APPLY_ACTION_FULL})
 add_executable(test_env ${TEST_ENV})
 add_executable(test_graph_state ${TEST_GRAPH_STATE})
 add_executable(test_topology_order ${TEST_TOPOLOGY_ORDER})
+add_executable(test_front_set ${TEST_FRONT_SET})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
