--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
+exclude: '^.*\.json'
 repos:
 -   repo: https://github.com/pre-commit/mirrors-clang-format
     rev: v14.0.6
     hooks:
     -   id: clang-format
-    types_or: [c++, c, cuda]
+        'types_or': [c++, c, cuda]
 -   repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
