--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,13 @@ repos:
     -   id: clang-format
         'types_or': [c++, c, cuda]
 
+-   repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+    -   id: isort
+        name: isort (python)
+        args: ["--profile", "black"]
+
 -   repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
