--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: pre-commit
+name: CI
 
 on:
   pull_request:
@@ -15,6 +15,8 @@ jobs:
         run: |
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           echo $CONDA/bin >> $GITHUB_PATH
+          ls -l $CONDA
+          which conda
       - name: Install Dependencies
         run: |
           sudo apt install -y build-essential cmake
