--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,23 +13,18 @@ jobs:
         shell: bash -l {0}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - name: Add conda to system path
-        run: |
-          # $CONDA is an environment variable pointing to the root of the miniconda directory
-          echo $CONDA/bin >> $GITHUB_PATH
-          conda init bash
-          source ~/.bashrc
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: quartz
+          environment-file: env.yml
       - name: Install Dependencies
         run: |
           sudo apt install -y build-essential cmake
-          conda env create --name quartz --file env.yml
       - name: Compile Quartz
         run: |
-          conda activate quartz
           mkdir build; cd build
           cmake ..
-          make install
+          sudo make install
       - name: Build Cython part
         run: |
           cd python
