ci: mullti job make

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           mkdir build; cd build
           cmake ..
-          sudo make install
+          sudo make install -j$(nproc --all)
       - name: Build Cython part
         run: |
           cd python
