add copy constructor for game

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -68,6 +68,7 @@ file(GLOB_RECURSE TEST_TOPOLOGY_ORDER "test_topology_order.cpp")
 file(GLOB_RECURSE TEST_FRONT_SET "test_front_set.cpp")
 file(GLOB_RECURSE TEST_GAME_INITIAL "test_game_initial.cpp")
 file(GLOB_RECURSE TEST_RANDOM_INITIAL_MAPPING "test_random_initial_mapping.cpp")
+file(GLOB_RECURSE TEST_GAME_COPY "test_game_copy.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -123,6 +124,7 @@ add_executable(test_topology_order ${TEST_TOPOLOGY_ORDER})
 add_executable(test_front_set ${TEST_FRONT_SET})
 add_executable(test_game_initial ${TEST_GAME_INITIAL})
 add_executable(test_random_initial_mapping ${TEST_RANDOM_INITIAL_MAPPING})
+add_executable(test_game_copy ${TEST_GAME_COPY})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
