finished and tested c++ environment for simple_search_env.h

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -71,6 +71,7 @@ file(GLOB_RECURSE TEST_RANDOM_INITIAL_MAPPING "test_random_initial_mapping.cpp")
 file(GLOB_RECURSE TEST_GAME_COPY "test_game_copy.cpp")
 file(GLOB_RECURSE TEST_ENV_RANDOM_START "test_env_random_start.cpp")
 file(GLOB_RECURSE TEST_GAME_SEARCH "test_game_search.cpp")
+file(GLOB_RECURSE TEST_SEARCH_ENV "test_search_env.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -129,6 +130,7 @@ add_executable(test_random_initial_mapping ${TEST_RANDOM_INITIAL_MAPPING})
 add_executable(test_game_copy ${TEST_GAME_COPY})
 add_executable(test_env_random_start ${TEST_ENV_RANDOM_START})
 add_executable(test_game_search ${TEST_GAME_SEARCH})
+add_executable(test_search_env ${TEST_SEARCH_ENV})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
