add function to read mappings from file

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -72,6 +72,7 @@ file(GLOB_RECURSE TEST_GAME_COPY "test_game_copy.cpp")
 file(GLOB_RECURSE TEST_ENV_RANDOM_START "test_env_random_start.cpp")
 file(GLOB_RECURSE TEST_GAME_SEARCH "test_game_search.cpp")
 file(GLOB_RECURSE TEST_SEARCH_ENV "test_search_env.cpp")
+file(GLOB_RECURSE TEST_READ_MAPPING "test_read_mapping.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -131,6 +132,7 @@ add_executable(test_game_copy ${TEST_GAME_COPY})
 add_executable(test_env_random_start ${TEST_ENV_RANDOM_START})
 add_executable(test_game_search ${TEST_GAME_SEARCH})
 add_executable(test_search_env ${TEST_SEARCH_ENV})
+add_executable(test_read_mapping ${TEST_READ_MAPPING})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
