changed the search space of SimpleSearchEnv to SearchFull (i.e. PhysicalFull w/o connected constraint)

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -73,6 +73,7 @@ file(GLOB_RECURSE TEST_ENV_RANDOM_START "test_env_random_start.cpp")
 file(GLOB_RECURSE TEST_GAME_SEARCH "test_game_search.cpp")
 file(GLOB_RECURSE TEST_SEARCH_ENV "test_search_env.cpp")
 file(GLOB_RECURSE TEST_READ_MAPPING "test_read_mapping.cpp")
+file(GLOB_RECURSE TEST_GAME_SEARCH_ACTION_SPACE "test_game_search_action_space.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -133,6 +134,7 @@ add_executable(test_env_random_start ${TEST_ENV_RANDOM_START})
 add_executable(test_game_search ${TEST_GAME_SEARCH})
 add_executable(test_search_env ${TEST_SEARCH_ENV})
 add_executable(test_read_mapping ${TEST_READ_MAPPING})
+add_executable(test_game_search_action_space ${TEST_GAME_SEARCH_ACTION_SPACE})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
