Add MQT benchmarks and code skeleton for test_simulation

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -36,6 +36,7 @@ file(GLOB_RECURSE TEST_PRUNING "test_pruning.cpp")
 file(GLOB_RECURSE TEST_QUARTZ "test_quartz.cpp")
 file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
+file(GLOB_RECURSE TEST_SIMULATION "test_simulation.cpp")
 file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
 file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
 file(GLOB_RECURSE TEST_APPLY_XFER "test_apply_xfer.cpp")
@@ -67,6 +68,7 @@ add_executable(test_phase_shift ${TEST_PHASE_SHIFT} )
 add_executable(test_pruning ${TEST_PRUNING} )
 add_executable(test_quartz ${TEST_QUARTZ} )
 add_executable(test_rigetti ${TEST_RIGETTI} )
+add_executable(test_simulation ${TEST_SIMULATION} )
 add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
 add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
