add analysis for number of gates within 6 layers

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -79,6 +79,7 @@ file(GLOB_RECURSE TEST_ENV_HYBRID "test_env_hybrid.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
+file(GLOB_RECURSE CHECK_FRONT_PERCENTAGE "check_front_percentage.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -142,6 +143,7 @@ add_executable(test_env_hybrid ${TEST_ENV_HYBRID})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
+add_executable(check_front_percentage ${CHECK_FRONT_PERCENTAGE})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
