[simulator] fix compilation error, cmake version at least 3.18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ include_directories("src/quartz/")
 set(QUARTZ_LIBS "")
 set(QUARTZ_LINK_LIBS ${CMAKE_DL_LIBS})
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# set(QSIM_INCLUDE_DIRS "")
+# set(QSIM_EXT_LIBRARIES "")
 
 file(GLOB_RECURSE QUARTZ_SRCS
         src/quartz/*.cpp
@@ -109,7 +111,7 @@ install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/quartz/
         DESTINATION include/quartz
         FILES_MATCHING PATTERN "*.h")
 
-add_subdirectory(src/sim)
-add_subdirectory(src/examples)
 add_subdirectory(src/test)
 add_subdirectory(src/benchmark)
+add_subdirectory(src/sim)
+
