--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -76,6 +76,7 @@ file(GLOB_RECURSE TEST_READ_MAPPING "test_read_mapping.cpp")
 file(GLOB_RECURSE TEST_GAME_SEARCH_ACTION_SPACE "test_game_search_action_space.cpp")
 file(GLOB_RECURSE TEST_GAME_HYBRID "test_game_hybrid.cpp")
 file(GLOB_RECURSE TEST_ENV_HYBRID "test_env_hybrid.cpp")
+file(GLOB_RECURSE TEST_GENERATE_PLAN "test_generate_plan.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -140,6 +141,7 @@ add_executable(test_read_mapping ${TEST_READ_MAPPING})
 add_executable(test_game_search_action_space ${TEST_GAME_SEARCH_ACTION_SPACE})
 add_executable(test_game_hybrid ${TEST_GAME_HYBRID})
 add_executable(test_env_hybrid ${TEST_ENV_HYBRID})
+add_executable(test_generate_plan ${TEST_GENERATE_PLAN})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
