--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,3 +111,7 @@ install (DIRECTORY ${PROJECT_SOURCE_DIR}/src/quartz/
 
 add_subdirectory(src/test)
 add_subdirectory(src/benchmark)
+
+if(QUARTZ_USE_SIMULATOR)
+  add_subdirectory(src/sim)
+endif()
