--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -11,6 +11,7 @@ numpy==1.22.1
 pbr==5.8.0
 ply==3.11
 psutil==5.9.0
+pybind11>=2.6.2
 pycparser==2.21
 python-constraint==1.4.0
 python-dateutil==2.8.2
