--- a/src/sim/CMakeLists.txt
+++ b/src/sim/CMakeLists.txt
@@ -45,16 +45,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Global CUDA CXX flags/options
-set(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
+set(CUDA_HOST_COMPILER "${CMAKE_CXX_COMPILER}")
 set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_EXTENSIONS OFF)
+
+list(APPEND NVCC_FLAGS
+  -std=c++17)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} ${NVCC_FLAGS})
 
 set(CMAKE_CUDA_FLAGS_ARCH_SM70 "-gencode arch=compute_70,code=sm_70")
 set(CMAKE_CUDA_FLAGS_ARCH "${CMAKE_CUDA_FLAGS_ARCH_SM70} ${CMAKE_CUDA_FLAGS_ARCH_SM75} ${CMAKE_CUDA_FLAGS_ARCH_SM80} ${CMAKE_CUDA_FLAGS_ARCH_SM90}")
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} ${CMAKE_CUDA_FLAGS_ARCH}")
 
 message(STATUS "cuda compiler: ${CMAKE_CUDA_COMPILER}")
+message(STATUS "nvcc flags: ${CUDA_NVCC_FLAGS}")
 
 set(QSIM_INCLUDE_DIRS "")
 set(QSIM_EXT_LIBRARIES "")
@@ -62,6 +67,18 @@ set(QSIM_EXT_LIBRARIES "")
 include(cuda)
 
 include(cuquantum)
+
+#if (NCCL_ROOT STREQUAL "")
+    #include(nccl)
+#else()
+list(APPEND QSIM_INCLUDE_DIRS
+  ${NCCL_ROOT}/include)
+list(APPEND QSIM_EXT_LIBRARIES
+  ${NCCL_ROOT}/lib/libnccl${LIBEXT})
+#endif()
+
+
+include(mpi)
 
 list(APPEND QSIM_INCLUDE_DIRS
   ${QSIM_ROOT})
