fix: env_ppo.yml for installation of pytorch with cuda

--- a/experiment/ppo-new/env_ppo.yml
+++ b/experiment/ppo-new/env_ppo.yml
@@ -12,7 +12,8 @@ dependencies:
   - tqdm
   - numpy
   - matplotlib
-  - pytorch::pytorch-cuda
+  - pytorch::pytorch
+  - pytorch::pytorch-cuda=11.7
   - nvidia:cudatoolkit=11.7
   - dgl-cuda11.7
   - openmp
