--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -78,6 +78,7 @@ file(GLOB_RECURSE TEST_GAME_HYBRID "test_game_hybrid.cpp")
 file(GLOB_RECURSE TEST_ENV_HYBRID "test_env_hybrid.cpp")
 file(GLOB_RECURSE TEST_GENERATE_PLAN "test_generate_plan.cpp")
 file(GLOB_RECURSE TEST_MBQ "test_mbq.cpp")
+file(GLOB_RECURSE TEST_FIDELITY_CALCULATION "test_fidelity_calculation.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -144,6 +145,7 @@ add_executable(test_game_hybrid ${TEST_GAME_HYBRID})
 add_executable(test_env_hybrid ${TEST_ENV_HYBRID})
 add_executable(test_generate_plan ${TEST_GENERATE_PLAN})
 add_executable(test_mbq ${TEST_MBQ})
+add_executable(test_fidelity_calculation ${TEST_FIDELITY_CALCULATION})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
