+ add support for fidelity calculation in SimpleHybridEnv

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -80,6 +80,7 @@ file(GLOB_RECURSE TEST_GENERATE_PLAN "test_generate_plan.cpp")
 file(GLOB_RECURSE TEST_MBQ "test_mbq.cpp")
 file(GLOB_RECURSE TEST_FIDELITY_CALCULATION "test_fidelity_calculation.cpp")
 file(GLOB_RECURSE TEST_DEFAULT_FIDELITY_GRAPHS "test_default_fidelity_graphs.cpp")
+file(GLOB_RECURSE TEST_SUM_FIDELITY "test_sum_fidelity.cpp")
 # benchmarks
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
@@ -148,6 +149,7 @@ add_executable(test_generate_plan ${TEST_GENERATE_PLAN})
 add_executable(test_mbq ${TEST_MBQ})
 add_executable(test_fidelity_calculation ${TEST_FIDELITY_CALCULATION})
 add_executable(test_default_fidelity_graphs ${TEST_DEFAULT_FIDELITY_GRAPHS})
+add_executable(test_sum_fidelity ${TEST_SUM_FIDELITY})
 # benchmarks
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
