launch version 2.5.0 + add circuits from quartz-physical benchmark + fixed a bug in qasm file parsing + tested all circuits on linux

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -85,6 +85,7 @@ file(GLOB_RECURSE TEST_SUM_FIDELITY "test_sum_fidelity.cpp")
 file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
 file(GLOB_RECURSE CHECK_FRONT_PERCENTAGE "check_front_percentage.cpp")
+file(GLOB_RECURSE TEST_PHYSICAL_BENCHMARK "test_physical_benchmark.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -154,6 +155,7 @@ add_executable(test_sum_fidelity ${TEST_SUM_FIDELITY})
 add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
 add_executable(check_front_percentage ${CHECK_FRONT_PERCENTAGE})
+add_executable(test_physical_benchmark ${TEST_PHYSICAL_BENCHMARK})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
