--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -49,6 +49,7 @@ file(GLOB_RECURSE TEST_APPLIABLE_XFER "test_appliable_xfer.cpp")
 file(GLOB_RECURSE TEST_FROM_AND_TO_QASM "test_from_and_to_qasm.cpp")
 file(GLOB_RECURSE TEST_OPTIMIZE "test_optimize.cpp")
 file(GLOB_RECURSE TEST_CREATE_GRAPHXFER_FROM_QASM "test_create_graphXfer_from_qasm.cpp")
+file(GLOB_RECURSE TEST_PARTITION "test_partition.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -83,6 +84,7 @@ add_executable(test_appliable_xfer ${TEST_APPLIABLE_XFER} )
 add_executable(test_from_and_to_qasm ${TEST_FROM_AND_TO_QASM} )
 add_executable(test_optimize ${TEST_OPTIMIZE} )
 add_executable(test_create_graphXfer_from_qasm ${TEST_CREATE_GRAPHXFER_FROM_QASM} )
+add_executable(test_partition ${TEST_PARTITION} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
