--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -87,6 +87,7 @@ file(GLOB_RECURSE TEST_ROLLOUT "test_rollout.cpp")
 file(GLOB_RECURSE BENCHMARK_SABRE_1PASS "_benchmark_sabre_1_pass.cpp")
 file(GLOB_RECURSE CHECK_FRONT_PERCENTAGE "check_front_percentage.cpp")
 file(GLOB_RECURSE TEST_PHYSICAL_BENCHMARK "test_physical_benchmark.cpp")
+file(GLOB_RECURSE BFS_PLAN_SEARCH "bfs_plan_search.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -158,6 +159,7 @@ add_executable(test_rollout ${TEST_ROLLOUT})
 add_executable(benchmark_sabre_1pass ${BENCHMARK_SABRE_1PASS})
 add_executable(check_front_percentage ${CHECK_FRONT_PERCENTAGE})
 add_executable(test_physical_benchmark ${TEST_PHYSICAL_BENCHMARK})
+add_executable(bfs_plan_search ${BFS_PLAN_SEARCH})
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
