--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,3 +1,4 @@
+black>=22.1.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.10
@@ -24,7 +25,6 @@ qiskit-ignis==0.7.1
 qiskit-terra==0.23.3
 requests==2.27.1
 requests-ntlm==1.1.0
-retworkx==0.10.2
 scipy>=1.7.3
 six==1.16.0
 stevedore==3.5.0
