--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     hooks:
     -   id: isort
         name: isort (python)
-        args: ["--profile", "black", "--src", "[\"python\", \"experiment\"]"]
+        args: ["--profile", "black"]
 
 -   repo: https://github.com/psf/black
     rev: 22.6.0
