--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
+          auto-update-conda: true
           activate-environment: quartz
           environment-file: env.yml
       - name: Install Dependencies
