Fix qiskit and z3 versions

--- a/env.yml
+++ b/env.yml
@@ -11,5 +11,5 @@ dependencies:
   - pip:
     - cython>=3.0a1
     - pybind11>=2.6.2
-    - z3-solver
-    - qiskit
+    - z3-solver==4.8.12.0
+    - qiskit==0.23.3
