--- a/env.yml
+++ b/env.yml
@@ -9,7 +9,7 @@ dependencies:
   - python
   - openmp
   - pip:
-    - cython>=3.0a1
+    - cython==3.0.0
     - pybind11>=2.6.2
     - z3-solver==4.8.12.0
-    - qiskit==0.25.0
+    - qiskit==0.44.0
