--- a/env.yml
+++ b/env.yml
@@ -11,5 +11,5 @@ dependencies:
   - pip:
     - cython==3.0.0
     - pybind11>=2.6.2
-    - z3-solver==4.8.12.0
-    - qiskit==0.44.0
+    - z3-solver
+    - qiskit==0.42.0
