Any version in 3.11

--- a/env.yml
+++ b/env.yml
@@ -6,7 +6,7 @@ channels:
   - conda-forge
 dependencies:
   - pip
-  - python==3.11
+  - python>=3.11,<3.12
   - openmp
   - pip:
     - cython==3.0.0
