Remove constrains on cython and qiskit?

--- a/env.yml
+++ b/env.yml
@@ -9,7 +9,7 @@ dependencies:
   - python>=3.11,<3.12
   - openmp
   - pip:
-    - cython==3.0.0
+    - cython>=3.0.0
     - pybind11>=2.6.2
-    - z3-solver
-    - qiskit==0.42.1
+    - z3-solver>=4.8.12.0
+    - qiskit>=0.42.1
