--- a/env.yml
+++ b/env.yml
@@ -6,10 +6,10 @@ channels:
   - conda-forge
 dependencies:
   - pip
-  - python
+  - python>=3.11,<3.12
   - openmp
   - pip:
-    - cython>=3.0a1
+    - cython>=3.0.0
     - pybind11>=2.6.2
-    - z3-solver
-    - qiskit
+    - z3-solver>=4.8.12.0
+    - qiskit>=0.42.1
