[Circuit] Add a function to remove swap gates logically

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -16,6 +16,7 @@ file(GLOB_RECURSE TEST_PHASE_SHIFT "test_phase_shift.cpp")
 file(GLOB_RECURSE TEST_PRUNING "test_pruning.cpp")
 file(GLOB_RECURSE TEST_QUARTZ "test_quartz.cpp")
 file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
+file(GLOB_RECURSE TEST_REMOVE_SWAP "test_remove_swap.cpp")
 file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
 file(GLOB_RECURSE TEST_SIMULATION "test_simulation.cpp")
 file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
@@ -51,6 +52,7 @@ add_executable(test_phase_shift ${TEST_PHASE_SHIFT} )
 add_executable(test_pruning ${TEST_PRUNING} )
 add_executable(test_quartz ${TEST_QUARTZ} )
 add_executable(test_rigetti ${TEST_RIGETTI} )
+add_executable(test_remove_swap ${TEST_REMOVE_SWAP} )
 add_executable(test_simulation ${TEST_SIMULATION} )
 add_executable(test_sparsity ${TEST_SPARSITY} )
 add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
